# hello-candle

./: .gitignore  README.md
candle-yolov8/: Cargo.toml  README.md
candle-yolov8/src/: lib.rs  main.rs  model.rs
