[package]
name = "candle-yolov8"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
# candle-core = { version = "0.8.0" }
candle-core = { version = "0.8.0", features = ['metal'] }
candle-transformers = { version = "0.8.0" }
# candle-nn = { version = "0.8.0" }
candle-nn = { version = "0.8.0", features = ['metal'] }
clap = { version = "4.5.21", features = ["derive"] }
image = { version = "0.25.5", default-features = false, features = [
    "jpeg",
    "png",
] }
serde_json = "1.0.133"
serde_plain = "1.0.2"
tokenizers = "0.20.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
imageproc = { version = "0.25.0", default-features = false }
ab_glyph = "0.2.29"
tracing-chrome = "0.7.2"
hf-hub = "0.3.2"
rusttype = "0.9.3"
